# Schroedinger

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Basis/: Base.cpp  Base.h  ContinuousBase.h  DiscreteBase.h
src/Potential/: Potential.cpp  Potential.h  PotentialBuilder.cpp
src/Solver/: Numerov.cpp  Numerov.h  Solver.cpp
src/States/: State.cpp  State.h
src/core/: CMakeLists.txt  LogManager.h
src/ui/: CMakeLists.txt  InstanceList.cpp  InstanceList.h  MainWindow.cpp  MainWindow.h  main.cpp
tests/: potentials.cpp  solvers.cpp
